--- a/tasks/oracle-db-11-12.yml
+++ b/tasks/oracle-db-11-12.yml
@@ -64,7 +64,7 @@
     src: oracledb.systemd.j2
     dest: "/etc/systemd/system/oracledb.service"
   when: ansible_distribution_major_version == '7'
-  notify: "Start Oracle databases daemon"
+  # notify: "Start Oracle databases daemon"
   become: True
 
 - name: "Create systemd Oracle databases service for Centos 6"
@@ -73,7 +73,7 @@
     dest: "/etc/init.d/oracledb"
     mode: "0755"
   when: ansible_distribution_major_version == '6'
-  notify: "Start Oracle databases daemon"
+  # notify: "Start Oracle databases daemon"
   become: True
 
 - name: "Copy template for user creation for oracle"
@@ -93,6 +93,12 @@
     - skip_ansible_lint
   become: True
 
+- name: "Stop Oracle databases"
+  service:
+    name: oracledb
+    state: stopped
+  become: True
+
 - name: "Setup database port"
   replace:
     path: "{{ oracledb.oracle_home }}/network/admin/{{ item }}"
@@ -102,4 +108,10 @@
   loop:
     - "listener.ora"
     - "tnsnames.ora"
+  become: True
+
+- name: "Start Oracle databases"
+  service:
+    name: oracledb
+    state: started
   become: True
