--- a/tasks/oracle-db-11-12.yml
+++ b/tasks/oracle-db-11-12.yml
@@ -64,7 +64,6 @@
     src: oracledb.systemd.j2
     dest: "/etc/systemd/system/oracledb.service"
   when: ansible_distribution_major_version == '7'
-  notify: "Start Oracle databases daemon"
   become: True
 
 - name: "Create systemd Oracle databases service for Centos 6"
@@ -73,7 +72,6 @@
     dest: "/etc/init.d/oracledb"
     mode: "0755"
   when: ansible_distribution_major_version == '6'
-  notify: "Start Oracle databases daemon"
   become: True
 
 - name: "Copy template for user creation for oracle"
@@ -93,9 +91,10 @@
     - skip_ansible_lint
   become: True
 
-- name: "Stop Oracle databases"
+- name: "Stop the Oracle listener"
+  become_user: "{{ oracledb.user }}"
   shell: >
-    {{ oracledb.oracle_home }}/bin/dbshut {{ oracledb.oracle_home }}
+    {{ oracledb.oracle_home }}/bin/lsnrctl stop
   become: True
 
 - name: "Setup database port"
@@ -107,4 +106,27 @@
   loop:
     - "listener.ora"
     - "tnsnames.ora"
+  become: True
+
+- name: "Start the Oracle listener"
+  become_user: "{{ oracledb.user }}"
+  shell: >
+    source /home/{{ oracledb.user }}/.bashrc && {{ oracledb.oracle_home }}/bin/lsnrctl start
+  become: True
+
+- name: "Copy template for port changing"
+  template:
+    src: "change_port.sql.j2"
+    dest: "{{ oracledb.oracle_home }}/change_port.sql"
+    owner: "{{ oracledb.user }}"
+    group: "{{ oracledb.install_group }}"
+  become: True
+
+- name: "Execute sql query for Oracle user, tablespace creation"
+  become_user: "{{ oracledb.user }}"
+  shell: >
+    source /home/{{ oracledb.user }}/.bashrc && {{ oracledb.oracle_home }}/bin/sqlplus /
+    as sysdba @{{ oracledb.oracle_home }}/change_port.sql
+  tags:
+    - skip_ansible_lint
   become: True
