Switch off ansible warnings

--- a/tasks/oracle-db-11-12.yml
+++ b/tasks/oracle-db-11-12.yml
@@ -95,6 +95,8 @@
   become_user: "{{ oracledb.user }}"
   shell: >
     {{ oracledb.oracle_home }}/bin/lsnrctl stop
+  tags:
+    - skip_ansible_lint
   become: True
 
 - name: "Setup database port"
@@ -112,6 +114,8 @@
   become_user: "{{ oracledb.user }}"
   shell: >
     source /home/{{ oracledb.user }}/.bashrc && {{ oracledb.oracle_home }}/bin/lsnrctl start
+  tags:
+    - skip_ansible_lint
   become: True
 
 - name: "Copy template for port changing"
