--- a/tasks/system/swap.yml
+++ b/tasks/system/swap.yml
@@ -18,7 +18,7 @@
       command: "dd if=/dev/zero of={{ oracledb.swapfile_path }} \
         bs={{ oracledb.swapfile_bs_size_mb }}M \
         count={{ oracledb.swapfile_count }}"
-      creates: "{{ oracledb.swapfile_path }}"
+        creates: "{{ oracledb.swapfile_path }}"
       when: not swapfile.stat.exists
 
     - name: "Set swapfile permissions"
@@ -28,11 +28,13 @@
 
     - name: "Make swap"
       command: "/sbin/mkswap {{ oracledb.swapfile_path }}"
-      changed_when: False
+      tags:
+        - skip_ansible_lint
 
     - name: "Swap on"
       command: "/sbin/swapon {{ oracledb.swapfile_path }}"
-      changed_when: False
+      tags:
+        - skip_ansible_lint
 
     - name: "Add swap to /etc/fstab"
       lineinfile:
