--- a/tasks/system/swap.yml
+++ b/tasks/system/swap.yml
@@ -18,6 +18,7 @@
       command: "dd if=/dev/zero of={{ oracledb.swapfile_path }} \
         bs={{ oracledb.swapfile_bs_size_mb }}M \
         count={{ oracledb.swapfile_count }}"
+      args:
         creates: "{{ oracledb.swapfile_path }}"
       when: not swapfile.stat.exists
 
