--- a/tasks/system/swap.yml
+++ b/tasks/system/swap.yml
@@ -15,12 +15,12 @@
         state: "unmounted"
 
     - name: "Create swapfile"
-      command: "dd if=/dev/zero of={{ oracledb.swapfile_path }} \
-        bs={{ oracledb.swapfile_bs_size_mb }}M \
-        count={{ oracledb.swapfile_count }}"
+      command: >-
+        dd if=/dev/zero of={{ oracledb.swapfile_path }}
+        bs={{ oracledb.swapfile_bs_size_mb }}M
+        count={{ oracledb.swapfile_count }}
       args:
         creates: "{{ oracledb.swapfile_path }}"
-      when: not swapfile.stat.exists
 
     - name: "Set swapfile permissions"
       file:
@@ -29,13 +29,9 @@
 
     - name: "Make swap"
       command: "/sbin/mkswap {{ oracledb.swapfile_path }}"
-      tags:
-        - skip_ansible_lint
 
     - name: "Swap on"
       command: "/sbin/swapon {{ oracledb.swapfile_path }}"
-      tags:
-        - skip_ansible_lint
 
     - name: "Add swap to /etc/fstab"
       lineinfile:
