--- a/vars/oracle11.yml
+++ b/vars/oracle11.yml
@@ -8,7 +8,7 @@ oracledb:
   install_group: "oinstall"
   dba_group: "dba"
   install_directory: "/opt/install/oracledb"
-  rsp_template: "db.rsp.{{ oracle_version }}.j2"
+  rsp_template: "db.rsp.{{ oracle_version }}"
   oracle_home: "{{ oracle_base }}/product/{{ patch_version }}/db_1"
   filesystemstorage: "{{ oracle_base }}/oradata"
   characterset: "AL32UTF8"
