--- a/molecule/docker-oracle-11/playbook.yml
+++ b/molecule/docker-oracle-11/playbook.yml
@@ -9,7 +9,8 @@
       - p13390677_112040_Linux-x86-64_1of7.zip
       - p13390677_112040_Linux-x86-64_2of7.zip
     oracle_db_swapfile: "/oracle-swapfile-docker-11"
-    oracle_db_swap_count: 2048
+    oracle_db_swap_count: 2096
+    db_port: 1522
   roles:
     - role: ansible-role-oracle-db
   become: True
