--- a/molecule/cloud-aws-oracle-11-delegated/playbook.yml
+++ b/molecule/cloud-aws-oracle-11-delegated/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: Test oracle-db 11 from static
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: 11
     patch_version: 11.2.0.4
