--- a/molecule/docker-oracle-xe/playbook.yml
+++ b/molecule/docker-oracle-xe/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install oracle-db
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: xe
     transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install"
