--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,8 @@ AWS Oracle DB XE:
     AWS_REGION: us-east-1
   stage: deployment test
   script:
+    - cd ansible-role-oracle-db
+    - git clone https://github.com/lean-delivery/ansible-molecule-drivers.git molecule/resources/provisioning
     - molecule test -s cloud-aws-oracle-xe-delegated
   tags:
     - aws
