--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
 variables:
   GET_SOURCES_ATTEMPTS: "5"
 
-Ansible lint:
+.Ansible lint:
   stage: lint
   before_script:
     - git clone https://github.com/lean-delivery/ansible-lint-rules.git ~/ansible-lint-rules
@@ -67,8 +67,7 @@ AWS Oracle DB XE:
     AWS_REGION: us-east-1
   stage: deployment test
   script:
-    - cd ansible-role-oracle-db
-    - git clone https://github.com/lean-delivery/ansible-molecule-drivers.git molecule/resources/provisioning
+    - pwd
     - molecule test -s cloud-aws-oracle-xe-delegated
   tags:
     - aws
