--- a/molecule/cloud-aws-oracle-xe-delegated/playbook.yml
+++ b/molecule/cloud-aws-oracle-xe-delegated/playbook.yml
@@ -6,6 +6,8 @@
     transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install"
     oracle_images:
       - "linux.x64_11gR2_xe.zip"
+    oracle_db_swapfile: "/oracle-swapfile-docker-xe"
+    oracle_db_swap_count: 2096
   roles:
     - role: ansible-role-oracle-db
   become: True
