--- a/molecule/docker-oracle-xe/playbook.yml
+++ b/molecule/docker-oracle-xe/playbook.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars:
     oracle_version: xe
-    transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install"
+    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install"
     oracle_images:
       - linux.x64_11gR2_xe.zip
     oracle_db_swapfile: "/oracle-swapfile-docker-xe"
