--- a/molecule/docker-oracle-11/playbook.yml
+++ b/molecule/docker-oracle-11/playbook.yml
@@ -4,7 +4,7 @@
   vars:
     oracle_version: 11
     patch_version: 11.2.0.4
-    transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install/11g/11.2.0.4"
+    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install/11g/11.2.0.4"
     oracle_images:
       - p13390677_112040_Linux-x86-64_1of7.zip
       - p13390677_112040_Linux-x86-64_2of7.zip
