--- a/molecule/docker-oracle-12/playbook.yml
+++ b/molecule/docker-oracle-12/playbook.yml
@@ -4,7 +4,7 @@
   vars:
     oracle_version: 12
     patch_version: 12.1.0.2
-    transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install"
+    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install"
     oracle_images:
       - linuxamd64_12102_database_1of2.zip
       - linuxamd64_12102_database_2of2.zip
