--- a/molecule/cloud-aws-oracle-xe-delegated/molecule.yml
+++ b/molecule/cloud-aws-oracle-xe-delegated/molecule.yml
@@ -27,8 +27,8 @@ provisioner:
   name: ansible
   log: True
   playbooks:
-    create: ../resources/provisioning/AWS/create.yml
-    prepare: ../resources/provisioning/AWS/prepare.yml
+    create: ../resources/create.yml
+    prepare: ../resources/prepare.yml
     destroy: ../resources/provisioning/AWS/destroy.yml
   lint:
     name: ansible-lint
